<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ianwa.distfr.AccountHomeActivity"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/header_top"
        android:text="@string/appname"
        android:layout_gravity="center"
        style="@style/header" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_prompt"
        android:textSize="@dimen/welcome"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_marginTop="@dimen/header_top"
        android:layout_gravity="center"
        android:onClick="onAddFaceClicked"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rec"
        android:layout_marginTop="@dimen/margin_button"
        android:layout_gravity="center"
        android:onClick="onRecognizeClicked"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginTop="@dimen/header_top"
        android:layout_gravity="center"
        android:onClick="onLogoutClicked"/>

</LinearLayout>
