<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ianwa.distfr.LoginActivity"
    android:padding="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/header"
        android:text="@string/appname"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/header_top"/>

    <TextView
        android:id="@+id/login_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/mess"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin_message"
        android:text="" />

    <EditText
        android:id="@+id/login_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/user"
        android:maxLines="1"
        android:layout_marginTop="@dimen/margin_prompt" />

    <EditText
        android:id="@+id/login_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/pass"
        android:maxLines="1"
        android:layout_marginTop="@dimen/margin_prompt"  />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_button"
        android:text="@string/log"
        android:onClick="onLoginClicked"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_button"
        android:text="@string/back"
        android:onClick="onBackClicked"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:visibility="invisible"
        android:id="@+id/login_hidden"/>

</LinearLayout>
